1. Changed encoding to UTF-8 2. reformatted code and optimized imports 3. added  big decimal support for logical operators